BGE: Fix for [#35320] "Crash When Adding Property without Setting Material" reported by Leon Cheung.

Adding an extra NULL check to draw_mesh_text() to avoid accessing a NULL material array.